--- a/MarketplaceFrontend/wwwroot/index.html
+++ b/MarketplaceFrontend/wwwroot/index.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Optional: scoped CSS for Blazor components -->
     <!-- <link href="MarketplaceFrontend.styles.css" rel="stylesheet" /> -->
 </head>
@@ -30,6 +30,7 @@
 
     <!-- Bootstrap JS (for navbar toggler, modals, etc.) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    
 
 
 </body>
